# rust-pokedex

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  openapi.json  openapi.yaml  package.json  rustc-ice-2024-04-09T09_42_00-20042.txt  rustc-ice-2024-04-09T09_42_00-20043.txt
bins/app/: Cargo.toml
bins/app/src/: main.rs  web.rs
bins/app/src/application/: configure.rs  mod.rs
bins/app/src/application/admin/: mod.rs
bins/app/src/application/admin/pokedexes/: contract.rs  data.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
bins/app/src/application/admin/pokedexes/http/: handle_pokedex_delete.rs  handle_pokedexes_paginated.rs  mod.rs
bins/app/src/application/admin/pokemons/: contract.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
bins/app/src/application/admin/pokemons/data/: mod.rs  pokemon_ability_data.rs  pokemon_data.rs  pokemon_pagination_data.rs  pokemon_stat_data.rs  pokemon_type_data.rs
bins/app/src/application/admin/pokemons/http/: handle_pokemon_ability_update.rs  handle_pokemon_show.rs  handle_pokemon_stat_update.rs  handle_pokemon_type_update.rs  handle_pokemon_update.rs  handle_pokemons_paginated.rs  mod.rs
bins/app/src/application/admin/users/: contract.rs  data.rs  domain.rs  infrastructure.rs  setup.rs  test.rs
bins/app/src/application/admin/users/http/: handle_user_activate.rs  handle_user_deactivate.rs  handle_user_logout.rs  handle_user_show.rs  handle_users_paginated.rs  mod.rs
bins/app/src/application/auth/login/: contract.rs  data.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
bins/app/src/application/auth/login/http/: handle_index.rs  handle_login.rs  handle_logout.rs  handle_refresh.rs  mod.rs
bins/app/src/application/auth/registration/: contract.rs  data.rs  domain.rs  infrastructure.rs  setup.rs  test.rs
bins/app/src/application/auth/registration/http/: handle_email_resend.rs  handle_register.rs  handle_verify_email.rs  mod.rs
bins/app/src/application/pokedex/: contract.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs
bins/app/src/application/pokedex/http/: handle_paginated_pokemons.rs  mod.rs
bins/app/src/application/pokemon_game/: contract.rs  data.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
bins/app/src/application/pokemon_game/http/: handle_guess_attempt.rs  handle_pokemon_game_start.rs  mod.rs
bins/app/src/application/templates/: login.html
bins/app/src/cron/: mod.rs  tests.rs
bins/app/src/cron/seeder/: contract.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs
bins/app/src/middleware/: admin.rs  auth.rs  mod.rs  rate_limiter.rs
docs/: index.ts  package.json  tsconfig.json
docs/components/responses/: DieselError.ts  (+12 more)
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/constants/: Cargo.toml
libs/error/: Cargo.toml
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: db.rs  lib.rs  pools.rs  schema.rs  sql_types.rs  state.rs
libs/support/: Cargo.toml
libs/support/src/: lib.rs
libs/support/src/helpers/: base_url.rs  generate_tokens.rs  http.rs  mod.rs  obfuscator.rs  random_pokemon_id.rs  send_email.rs  validations.rs  value_converters.rs  verify_access_token.rs  verify_refresh_token.rs
libs/support/src/services/seeder/: mod.rs
libs/support/src/services/seeder/pokemon_api/: abilities.rs  mod.rs  pokemons.rs  stats.rs  types.rs
libs/support/src/store/models/: action_token.rs  jwt_tokens.rs  mod.rs  user.rs  user_attempts.rs  user_pokedex.rs
libs/support/src/store/models/pokemons/: api_pokemon.rs  mod.rs  pokemon.rs  pokemon_ability.rs  pokemon_stat.rs  pokemon_type.rs
migrations/2024-02-08-135022_create_pokemons/: down.sql  up.sql
migrations/2024-02-08-135133_create_pokemon_abilities/: up.sql
(+42 files in other folders)
