[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
config = { path = "../../libs/config" }
error = { path = "../../libs/error" }
infrastructure = { path = "../../libs/infrastructure" }
support = { path = "../../libs/support" }
constants = { path = "../../libs/constants" }

# codegen stuff
async-trait = "0.1"

# Http stuff
actix-web = "4.5.1"
actix = "*"
actix-rt = "2.9.0"
actix-service = "2.0.2"
reqwest = { version = "0.12.2", features = ["json"] }
http = "1.1.0"
recaptcha-verify = "*"
tera = "*"
actix-governor = "0.5.0"
actix-ratelimit = "0.3.1"
actix-limitation = "0.5.1"

# database stuff
diesel = { version = "2.1.0", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#helpers
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.17"
validr = "0.3.1"
cron = "0.12.0"
crony = "0.3.1"
tokio = { version = "1.37.0", features = ["full"] }
bcrypt = "0.15.0"
pwhash = "1"
rand = "0.8.5"
uuid = "1.7.0"
json-decode = "0.6.0"
select = "0.6.0"
regex = "*"
dashmap = "5.5.3"

# docs
openapi = "0.1.5"

chrono = { version = "0.4.26", features = ["serde"] }
futures-util = "0.3.28"
futures = "0.3.4"
html-minifier = "5.0.0"